sample/misc/error/lexer_large-int.bfr
let ok = 4611686018427387903
let ng = 4611686018427387904

codegen []